Setup route linking via NavLink; Add graident color to header title

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,7 @@
 // Colors
+$sublime: #f2709c;
+$sublime: to bottom, #ff9472, #f2709c;
+$sublime: to bottom, #ff9472, #f2709c;
 
 // Spacing
 $s-size: 1.6rem;
