Design login page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,8 @@ html {
 }
 
 body {
-  font-family: "Exo", Helvetica, Arial, sans-serif;
+  // font-family: "Exo", Helvetica, Arial, sans-serif;
+  font-family: "Rajdhani";
   font-size: $m-size;
 }
 
