--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 @import "./base/settings";
 @import "./base/base";
+@import "./components/box-layout";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Rajdhani&display=swap");
