--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,13 @@
 // Colors
-$sublime: #f2709c;
-$sublime: to bottom, #ff9472, #f2709c;
-$sublime: to bottom, #ff9472, #f2709c;
+$primary-gradient: #70e1f5;
+$primary-gradient: to bottom, #ffd194, #70e1f5;
+$primary-gradient: to bottom, #ffd194, #70e1f5;
+
+// Font size
+$font-size-x-lrg: 7rem;
+$font-size-lrg: 4rem;
+$font-size-med: 3rem;
+$font-size-small: 2.5rem;
 
 // Spacing
 $s-size: 1.6rem;
