--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,10 @@
 @import "./base/settings";
 @import "./base/base";
 @import "./components/box-layout";
+@import "./components/header";
+@import "./components/content-container";
+@import "./components/page-header";
+@import "./components/input-group";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
