Improve general design

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,8 @@
 @import "./components/content-container";
 @import "./components/page-header";
 @import "./components/input-group";
+@import "./components/inputs";
+@import "./components/form";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
