--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -8,11 +8,13 @@ $font-size-x-lrg: 7rem;
 $font-size-lrg: 4rem;
 $font-size-med: 3rem;
 $font-size-small: 2.5rem;
+$font-size-xsmall: 2rem;
 
 // Spacing
 $s-size: 1.6rem;
 $m-size: 2.3rem;
 $l-size: 3.6rem;
+$xl-size: 4.2rem;
 
 // Devices
 $desktop-breakpoint: 45rem;
