--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -1,11 +1,12 @@
 .input-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: $m-size;
+  padding-top: $l-size;
+  padding-bottom: $m-size;
 
   @media (min-width: $desktop-breakpoint) {
     flex-direction: row;
-    margin-bottom: $l-size;
+    padding-bottom: $l-size;
   }
 }
 
