--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,10 +11,13 @@
 
 .header__title {
   color: white;
-  text-decoration: none !important;
   h1 {
     margin: 0;
   }
+}
+
+a {
+  text-decoration: none !important;
 }
 
 .header__title-fyi {
