--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,8 @@
 @import "./components/input-group";
 @import "./components/inputs";
 @import "./components/form";
+@import "./components/list";
+@import "./components/visibility";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
