Add loadeing page, loader, and test

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,7 @@
 @import "./components/form";
 @import "./components/list";
 @import "./components/visibility";
+@import "./components/loader";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
