Add cancel button on add expense page

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -12,8 +12,18 @@
 }
 
 .form__error {
-  margin: 0 0 $m-size 0;
+  background: $primary-gradient; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    $primary-gradient
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    $primary-gradient
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-style: italic;
+  font-size: $font-size-small;
+  margin: 0 0 $m-size 0;
   text-align: center;
 }
 
