--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,4 +13,4 @@
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Rajdhani&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Rajdhani:400,600,700&display=swap");
