--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,6 +11,7 @@
 
 .header__title {
   color: white;
+  font-weight: 400;
   h1 {
     margin: 0;
   }
@@ -31,6 +32,7 @@ a {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-weight: 600;
 }
 
 .header__button {
