--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -59,7 +59,7 @@
   text-align: center;
   color: white;
   @media (max-width: $desktop-breakpoint) {
-    margin-top: $l-size;
+    margin-top: 0px;
     padding-left: $s-size;
     width: 35rem;
   }
