--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,15 +1,16 @@
 @import "./base/settings";
 @import "./base/base";
 @import "./components/box-layout";
-@import "./components/header";
 @import "./components/content-container";
-@import "./components/page-header";
+@import "./components/footer";
+@import "./components/form";
+@import "./components/header";
 @import "./components/input-group";
 @import "./components/inputs";
-@import "./components/form";
 @import "./components/list";
-@import "./components/visibility";
 @import "./components/loader";
+@import "./components/page-header";
+@import "./components/visibility";
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Exo:100&display=swap");
